--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!-- css file -->
-    <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="./dist/css/main.min.css">
 </head>
 
 <body >
@@ -46,7 +46,7 @@
             Let me tell you a few things ...
         </h2>
         <div class="about-info">
-            <img src="./img/logo.jpg" alt="logo" class="bio-image">
+            <img src="./dist/img/logo.jpg" alt="logo" class="bio-image">
             <div class="bio">
                 <h3 class="text-secondary">
                     BIO
@@ -80,7 +80,7 @@
         Copyright &copy; , 2020
     </footer>
     <!-- js file -->
-    <script src="./js/main.js"></script>
+    <script src="./dist/js/main.js"></script>
 </body>
 
 </html>
