--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!-- css file -->
-    <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="./dist/css/main.min.css">
     <title>Contact Me</title>
 </head>
 
@@ -74,7 +74,7 @@
         Copyright &copy; 2018
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="./dist/js/main.js"></script>
 </body>
 
 </html>
