--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!-- css file -->
-    <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="stylesheet" href="./dist/css/main.min.css">
 </head>
 <body id="bg-img">
     <!-- header -->
@@ -53,6 +53,6 @@
     </main>
 
     <!-- js file -->
-    <script src="./js/main.js"></script>
+    <script src="./dist/js/main.js"></script>
 </body>
 </html>
